overflow height fixed for animation

--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -171,7 +171,7 @@
     width: 90%;
     max-width: 15rem;
     min-width: 12rem;
-    height: 5rem;
+    height: 4.5rem;
     padding: 1rem;
     text-align: center;
     flex-direction: column;
@@ -182,12 +182,15 @@
     overflow: hidden;
     
 }
-p {
+.socialMediaHandles {
+    margin-top: 1rem;
+}
+.nameCard p {
     transition: all 0.5s;
 }
 
 .nameCard:hover p{
-    transform: translateY(-3.5rem);
+    transform: translateY(-4.5rem);
 }
 
 
